WIP: Fixes and improvements

--- a/factgenie/templates/crowdsourcing/annotate_body.html
+++ b/factgenie/templates/crowdsourcing/annotate_body.html
@@ -95,7 +95,7 @@
   </div>
   </div>
 
-  <div id="overlay-start">
+  <div id="overlay-start" class="overlay">
     <div id="overlay-start-content" class="overlay-content">
       <h1>Welcome!</h1>
       {{ instructions | safe }}
