--- a/factgenie/templates/crowdsourcing/annotate_header.html
+++ b/factgenie/templates/crowdsourcing/annotate_header.html
@@ -15,8 +15,8 @@
   <script src="{{ host_prefix }}/static/js/lib/split.min.js"></script>
   <script src="{{ host_prefix }}/static/js/lib/underscore-min.js"></script>
   <script src="{{ host_prefix }}/static/js/lib/backbone-min.js"></script>
-  <script src="{{ host_prefix }}/static/js/backbone-relational.js"></script>
-  <script src="{{ host_prefix }}/static/js/backbone.marionette.min.js"></script>
-  <script src="{{ host_prefix }}/static/js/underscore.string.min.js"></script>
-  <script src="{{ host_prefix }}/static/js/ypet.js"></script>
+  <script src="{{ host_prefix }}/static/js/lib/backbone-relational.js"></script>
+  <script src="{{ host_prefix }}/static/js/lib/backbone.marionette.min.js"></script>
+  <script src="{{ host_prefix }}/static/js/lib/underscore.string.min.js"></script>
+  <script src="{{ host_prefix }}/static/js/lib/ypet.js"></script>
 </head>
