--- a/factgenie/templates/pages/crowdsourcing_new.html
+++ b/factgenie/templates/pages/crowdsourcing_new.html
@@ -108,7 +108,7 @@
                 <select class="form-select" id="service" name="service">
                   <option value="local">Local annotators only</option>
                   <option value="prolific">Prolific</option>
-                  <option value="mturk">Amazon Mechanical Turk (beta)</option>
+                  <!-- <option value="mturk">Amazon Mechanical Turk (beta)</option> -->
                 </select>
               </div>
               <div class="form-group  mt-4">
