--- a/factgenie/templates/pages/llm_campaign_detail.html
+++ b/factgenie/templates/pages/llm_campaign_detail.html
@@ -70,7 +70,7 @@
           <a type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" id="save-generations-button"
             data-bs-target="#save-generations-modal" title="Save as model outputs">
             <!-- print out metadata.status -->
-            <i class="fa fa-file-text"></i> Save as model outputs
+            <i class="fa fa-paste"></i> Save as model outputs
           </a>
           {% endif %}
           {% if mode == 'llm_eval' %}
