--- a/factgenie/templates/pages/crowdsourcing_new.html
+++ b/factgenie/templates/pages/crowdsourcing_new.html
@@ -119,6 +119,15 @@
                 <input type="number" class="form-control" id="examplesPerBatch" name="examplesPerBatch" min="1"
                   required>
               </div>
+              <div class="form-group  mt-4">
+                <label for="annotatorsPerExample">Annotators per example</label>
+                <div class="mb-2">
+                  <small class="form-text text-muted">Maximum number of annotators that can annotate an example.
+                  </small>
+                </div>
+                <input type="number" class="form-control" id="annotatorsPerExample" name="annotatorsPerExample" min="1"
+                  value="1" required>
+              </div>
               <div class="form-group mt-4">
                 <!-- select for sort order -->
                 <label for="annotationGranularity">Annotation granularity</label>
@@ -291,7 +300,7 @@
 </body>
 <script>
   window.url_prefix = "{{ host_prefix }}";
-  window.model_outs = {{ model_outs | tojson | safe }};
+  window.available_data = {{ available_data | tojson | safe }};
   window.datasets = {{ datasets | tojson | safe }};
   window.configs = {{ configs | tojson | safe }};
   window.mode = "crowdsourcing";
