Enable multiple annotators

--- a/factgenie/templates/crowdsourcing/annotate_body.html
+++ b/factgenie/templates/crowdsourcing/annotate_body.html
@@ -99,7 +99,7 @@
     <div id="overlay-start-content" class="overlay-content">
       <h1>Welcome!</h1>
       {{ instructions | safe }}
-      <button id="hideOverlayBtn" class="btn btn-primary" disabled>View the annotation page</button>
+      <button id="hideOverlayBtn" class="btn btn-primary" disabled>Loading examples...</button>
     </div>
   </div>
 
