--- a/factgenie/templates/pages/llm_campaign_detail.html
+++ b/factgenie/templates/pages/llm_campaign_detail.html
@@ -138,7 +138,7 @@
                       <i class="fa fa-recycle"></i>
                     </a>
                     <a class="btn btn-sm btn-outline-secondary"
-                      href="{{host_prefix}}/browse?dataset={{ example.dataset }}&split={{ example.split }}&example_idx={{ example.example_idx }}"
+                      href="{{host_prefix}}/browse?dataset={{ example.dataset }}&split={{ example.split }}&example_idx={{ example.example_idx }}&setup_id={{ example.setup_id }}"
                       role="button" title="Show example">
                       <i class="fa fa-external-link"></i>
                     </a>
