--- a/factgenie/static/css/custom.css
+++ b/factgenie/static/css/custom.css
@@ -974,3 +974,17 @@ a:hover {
 .detail-out-card {
     margin: 5px 20px 5px 5px;
 }
+
+@keyframes jump-out {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
