--- a/factgenie/templates/pages/browse.html
+++ b/factgenie/templates/pages/browse.html
@@ -183,6 +183,7 @@
   window.url_prefix = "{{ host_prefix }}";
   window.display_example = {{ display_example | tojson | safe }};
   window.datasets = {{ datasets | tojson | safe }};
+  window.highlight_setup_id = "{{ highlight_setup_id }}";
   window.mode = "browse";
 </script>
 
