--- a/factgenie/templates/include/annotation_span_categories.html
+++ b/factgenie/templates/include/annotation_span_categories.html
@@ -1,9 +1,10 @@
-<div class="row mb-3 mt-3 align-items-center">
+<div class="row align-items-center">
     <div class="col-auto">
         <i class="fa fa-pencil"></i>
         <span style="margin-left: 10px; margin-right: 10px;">Annotation span categories</span>
         <div class="mb-2">
-            <small class="form-text text-muted">Categories used for annotation. You should instruct the annotators to
+            <small class="form-text text-muted">Categories used for annotation. You should instruct the annotators (or
+                the model) to
                 use
                 these categories. The order of the category (0
                 to n) corresponds to value of the `type` field in the annotation JSON.
