Add a wizard for adding an example in the prompt template

--- a/factgenie/templates/pages/crowdsourcing_new.html
+++ b/factgenie/templates/pages/crowdsourcing_new.html
@@ -20,7 +20,7 @@
   {% include 'pages/navbar.html' %}
 
 
-  <div class="container w-50  mt-5">
+  <div class="container w-50 panel-50 mt-5">
     <a href="{{ host_prefix }}/crowdsourcing" class="btn btn-outline-secondary mb-5">← Crowdsourcing campaigns</a>
     <div class="mt-1">
 
@@ -84,7 +84,7 @@
               {% include 'include/annotation_span_categories.html' %}
 
               <div class="col-auto mt-3">
-                <button type="button" class="btn btn-primary btn-sm" onclick="prefillInstructions();">✨
+                <button type="button" class="btn btn-outline-secondary btn-sm" onclick="prefillInstructions();">✨
                   Pre-fill annotator
                   instructions</button>
               </div>
